--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@
 author: Lee Duhem
 description: > # this means to ignore newlines until "baseurl:"
   Notes about simplifying GNU Smalltalk.
+title: Notes about GNU Smalltalk
 baseurl: "/gst" # the subpath of your site, e.g. /blog
 url: "https://leeduhem.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: leeduhem
